--- a/packages/server-renderer/package.json
+++ b/packages/server-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uvue/server-renderer",
-  "version": "3.0.0-uvue.1",
+  "version": "3.0.0-rc.8.u1",
   "description": "@vue/server-renderer",
   "main": "index.js",
   "types": "dist/server-renderer.d.ts",
